JDK 1.3.1 compatibility fixes. While JDK 1.3.1 will start EOL process pretty soon, it just took a few simple changes to make the Turbine source code still compile under JDK 1.3.1.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/turbine/core/branches/TURBINE_2_3_BRANCH@280284 13f79535-47bb-0310-9956-ffa450edef68